2004-02-10  Satoru Takabayashi  <satoru@namazu.org>

	* acinclude.m4 (AM_PATH_RUBYDIR): Use Config::CONFIG["sitelibdir"]
	instead of Config::CONFIG["sitedir"].

2004-02-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-poor-emacs): Remove variable.
	(migemo-replace-in-string): Remove debug routine.
	(migemo-get-pattern, migemo-frequent-pattern-make): Associated
	value of `migemo-frequent-pattern-alist' and
	`migemo-pattern-alist' has a pattern include `^G'.
	
2003-09-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-emacs21p): Fix a careless mistake.
	(migemo-if): New macro.
	(migemo-poor-emacs): New variable for Debug.
	(migemo-replace-in-string): New function.
	(replace-regexp-in-string): Remove this definition.
	(migemo-get-pattern): Use `migemo-replace-in-string'. Bind
	`deactivate-mark' for Emacs21.4.
	(migemo-backward): Fix again for `looking-at'.
	(isearch-mode-map): Change key-binding for
	`migemo-isearch-toggle-migemo'.
	
2003-05-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-get-pattern): Delete unused variable.
	Execute `white-space-regexp' in original buffer.

2003-05-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el (TOP): Change file local variable format.
	(ALL): Use `defcustom' whole all user variable.
	(migemo-pre-conv-function, migemo-after-conv-function): New user
	options.

2003-05-28  Satoru Takabayashi  <satoru@namazu.org>

	* Migemo: Version 0.40 Released.

	* Makefile.am (EXTRA_DIST): Add migemo.rb.in

	* configure.in: Bumped version number to 0.40.
	(AC_OUTPUT): Add migemo.rb.

	* migemo.el.in (migemo-get-pattern): Use migemo-white-space-regexp
	variable.
	(migemo-white-space-regexp): New variable.
	Add -*- coding: euc-jp-unix -*- to the beginning of the file.

2003-05-27  Satoru Takabayashi  <satoru@namazu.org>

	* migemo-grep (parse_options): Add parens to String#sub method to
	avoid warnings.

	* migemo (main): Insert migemo.insertion in the middle of each